patito/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON program_start vars funcs MAIN LPAREN RPAREN main_start body END
Rule 2     program_start -> <empty>
Rule 3     main_start -> <empty>
Rule 4     vars -> VAR var_decl_list
Rule 5     vars -> empty
Rule 6     var_decl_list -> var_decl var_decl_list
Rule 7     var_decl_list -> var_decl
Rule 8     var_decl -> id_list COLON type SEMICOLON
Rule 9     id_list -> ID COMMA id_list
Rule 10    id_list -> ID
Rule 11    type -> INT
Rule 12    type -> FLOAT
Rule 13    funcs -> func funcs
Rule 14    funcs -> empty
Rule 15    func_start -> VOID ID LPAREN
Rule 16    func_start -> type ID LPAREN
Rule 17    func -> func_start params RPAREN LBRACKET vars func_code_start body RBRACKET SEMICOLON
Rule 18    func_code_start -> <empty>
Rule 19    params -> param_list
Rule 20    params -> empty
Rule 21    param_list -> ID COLON type COMMA param_list
Rule 22    param_list -> ID COLON type
Rule 23    body -> LBRACE statement_list RBRACE
Rule 24    statement_list -> statement statement_list
Rule 25    statement_list -> empty
Rule 26    statement -> assign
Rule 27    statement -> condition
Rule 28    statement -> cycle
Rule 29    statement -> f_call SEMICOLON
Rule 30    statement -> print
Rule 31    statement -> return_stmt
Rule 32    return_stmt -> RETURN expression SEMICOLON
Rule 33    assign -> ID EQ expression SEMICOLON
Rule 34    condition -> IF LPAREN expression RPAREN if_test body if_end
Rule 35    condition -> IF LPAREN expression RPAREN if_test body ELSE else_start body if_end
Rule 36    if_test -> <empty>
Rule 37    if_end -> <empty>
Rule 38    else_start -> <empty>
Rule 39    cycle -> WHILE while_start LPAREN expression RPAREN while_test DO body while_end
Rule 40    while_start -> <empty>
Rule 41    while_test -> <empty>
Rule 42    while_end -> <empty>
Rule 43    print -> PRINT LPAREN print_list RPAREN SEMICOLON
Rule 44    print_list -> print_item COMMA print_list
Rule 45    print_list -> print_item
Rule 46    print_item -> expression
Rule 47    print_item -> CTE_STRING
Rule 48    expression -> exp
Rule 49    expression -> exp GT exp
Rule 50    expression -> exp LT exp
Rule 51    expression -> exp NEQ exp
Rule 52    exp -> termino
Rule 53    exp -> exp PLUS termino
Rule 54    exp -> exp MINUS termino
Rule 55    termino -> factor
Rule 56    termino -> termino MULT factor
Rule 57    termino -> termino DIV factor
Rule 58    factor -> LPAREN expression RPAREN
Rule 59    factor -> PLUS factor
Rule 60    factor -> MINUS factor
Rule 61    factor -> f_call
Rule 62    factor -> cte
Rule 63    factor -> ID
Rule 64    cte -> CTE_INT
Rule 65    cte -> CTE_FLOAT
Rule 66    f_call -> ID LPAREN expression_list RPAREN
Rule 67    f_call -> ID LPAREN RPAREN
Rule 68    expression_list -> expression COMMA expression_list
Rule 69    expression_list -> expression
Rule 70    empty -> <empty>

Terminals, with rules where they appear

COLON                : 8 21 22
COMMA                : 9 21 44 68
CTE_FLOAT            : 65
CTE_INT              : 64
CTE_STRING           : 47
DIV                  : 57
DO                   : 39
ELSE                 : 35
END                  : 1
EQ                   : 33
FLOAT                : 12
GT                   : 49
ID                   : 1 9 10 15 16 21 22 33 63 66 67
IF                   : 34 35
INT                  : 11
LBRACE               : 23
LBRACKET             : 17
LPAREN               : 1 15 16 34 35 39 43 58 66 67
LT                   : 50
MAIN                 : 1
MINUS                : 54 60
MULT                 : 56
NEQ                  : 51
PLUS                 : 53 59
PRINT                : 43
PROGRAM              : 1
RBRACE               : 23
RBRACKET             : 17
RETURN               : 32
RPAREN               : 1 17 34 35 39 43 58 66 67
SEMICOLON            : 1 8 17 29 32 33 43
VAR                  : 4
VOID                 : 15
WHILE                : 39
error                : 

Nonterminals, with rules where they appear

assign               : 26
body                 : 1 17 34 35 35 39
condition            : 27
cte                  : 62
cycle                : 28
else_start           : 35
empty                : 5 14 20 25
exp                  : 48 49 49 50 50 51 51 53 54
expression           : 32 33 34 35 39 46 58 68 69
expression_list      : 66 68
f_call               : 29 61
factor               : 55 56 57 59 60
func                 : 13
func_code_start      : 17
func_start           : 17
funcs                : 1 13
id_list              : 8 9
if_end               : 34 35
if_test              : 34 35
main_start           : 1
param_list           : 19 21
params               : 17
print                : 30
print_item           : 44 45
print_list           : 43 44
program_start        : 1
programa             : 0
return_stmt          : 31
statement            : 24
statement_list       : 23 24
termino              : 52 53 54 56 57
type                 : 8 16 21 22
var_decl             : 6 7
var_decl_list        : 4 6
vars                 : 1 17
while_end            : 39
while_start          : 39
while_test           : 39

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON program_start vars funcs MAIN LPAREN RPAREN main_start body END

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON program_start vars funcs MAIN LPAREN RPAREN main_start body END

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON program_start vars funcs MAIN LPAREN RPAREN main_start body END

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . program_start vars funcs MAIN LPAREN RPAREN main_start body END
    (2) program_start -> .

    VAR             reduce using rule 2 (program_start -> .)
    VOID            reduce using rule 2 (program_start -> .)
    INT             reduce using rule 2 (program_start -> .)
    FLOAT           reduce using rule 2 (program_start -> .)
    MAIN            reduce using rule 2 (program_start -> .)

    program_start                  shift and go to state 5

state 5

    (1) programa -> PROGRAM ID SEMICOLON program_start . vars funcs MAIN LPAREN RPAREN main_start body END
    (4) vars -> . VAR var_decl_list
    (5) vars -> . empty
    (70) empty -> .

    VAR             shift and go to state 7
    VOID            reduce using rule 70 (empty -> .)
    INT             reduce using rule 70 (empty -> .)
    FLOAT           reduce using rule 70 (empty -> .)
    MAIN            reduce using rule 70 (empty -> .)

    vars                           shift and go to state 6
    empty                          shift and go to state 8

state 6

    (1) programa -> PROGRAM ID SEMICOLON program_start vars . funcs MAIN LPAREN RPAREN main_start body END
    (13) funcs -> . func funcs
    (14) funcs -> . empty
    (17) func -> . func_start params RPAREN LBRACKET vars func_code_start body RBRACKET SEMICOLON
    (70) empty -> .
    (15) func_start -> . VOID ID LPAREN
    (16) func_start -> . type ID LPAREN
    (11) type -> . INT
    (12) type -> . FLOAT

    MAIN            reduce using rule 70 (empty -> .)
    VOID            shift and go to state 13
    INT             shift and go to state 15
    FLOAT           shift and go to state 16

    funcs                          shift and go to state 9
    func                           shift and go to state 10
    empty                          shift and go to state 11
    func_start                     shift and go to state 12
    type                           shift and go to state 14

state 7

    (4) vars -> VAR . var_decl_list
    (6) var_decl_list -> . var_decl var_decl_list
    (7) var_decl_list -> . var_decl
    (8) var_decl -> . id_list COLON type SEMICOLON
    (9) id_list -> . ID COMMA id_list
    (10) id_list -> . ID

    ID              shift and go to state 20

    var_decl_list                  shift and go to state 17
    var_decl                       shift and go to state 18
    id_list                        shift and go to state 19

state 8

    (5) vars -> empty .

    VOID            reduce using rule 5 (vars -> empty .)
    INT             reduce using rule 5 (vars -> empty .)
    FLOAT           reduce using rule 5 (vars -> empty .)
    MAIN            reduce using rule 5 (vars -> empty .)
    LBRACE          reduce using rule 5 (vars -> empty .)


state 9

    (1) programa -> PROGRAM ID SEMICOLON program_start vars funcs . MAIN LPAREN RPAREN main_start body END

    MAIN            shift and go to state 21


state 10

    (13) funcs -> func . funcs
    (13) funcs -> . func funcs
    (14) funcs -> . empty
    (17) func -> . func_start params RPAREN LBRACKET vars func_code_start body RBRACKET SEMICOLON
    (70) empty -> .
    (15) func_start -> . VOID ID LPAREN
    (16) func_start -> . type ID LPAREN
    (11) type -> . INT
    (12) type -> . FLOAT

    MAIN            reduce using rule 70 (empty -> .)
    VOID            shift and go to state 13
    INT             shift and go to state 15
    FLOAT           shift and go to state 16

    func                           shift and go to state 10
    funcs                          shift and go to state 22
    empty                          shift and go to state 11
    func_start                     shift and go to state 12
    type                           shift and go to state 14

state 11

    (14) funcs -> empty .

    MAIN            reduce using rule 14 (funcs -> empty .)


state 12

    (17) func -> func_start . params RPAREN LBRACKET vars func_code_start body RBRACKET SEMICOLON
    (19) params -> . param_list
    (20) params -> . empty
    (21) param_list -> . ID COLON type COMMA param_list
    (22) param_list -> . ID COLON type
    (70) empty -> .

    ID              shift and go to state 26
    RPAREN          reduce using rule 70 (empty -> .)

    params                         shift and go to state 23
    param_list                     shift and go to state 24
    empty                          shift and go to state 25

state 13

    (15) func_start -> VOID . ID LPAREN

    ID              shift and go to state 27


state 14

    (16) func_start -> type . ID LPAREN

    ID              shift and go to state 28


state 15

    (11) type -> INT .

    ID              reduce using rule 11 (type -> INT .)
    SEMICOLON       reduce using rule 11 (type -> INT .)
    COMMA           reduce using rule 11 (type -> INT .)
    RPAREN          reduce using rule 11 (type -> INT .)


state 16

    (12) type -> FLOAT .

    ID              reduce using rule 12 (type -> FLOAT .)
    SEMICOLON       reduce using rule 12 (type -> FLOAT .)
    COMMA           reduce using rule 12 (type -> FLOAT .)
    RPAREN          reduce using rule 12 (type -> FLOAT .)


state 17

    (4) vars -> VAR var_decl_list .

    VOID            reduce using rule 4 (vars -> VAR var_decl_list .)
    INT             reduce using rule 4 (vars -> VAR var_decl_list .)
    FLOAT           reduce using rule 4 (vars -> VAR var_decl_list .)
    MAIN            reduce using rule 4 (vars -> VAR var_decl_list .)
    LBRACE          reduce using rule 4 (vars -> VAR var_decl_list .)


state 18

    (6) var_decl_list -> var_decl . var_decl_list
    (7) var_decl_list -> var_decl .
    (6) var_decl_list -> . var_decl var_decl_list
    (7) var_decl_list -> . var_decl
    (8) var_decl -> . id_list COLON type SEMICOLON
    (9) id_list -> . ID COMMA id_list
    (10) id_list -> . ID

    VOID            reduce using rule 7 (var_decl_list -> var_decl .)
    INT             reduce using rule 7 (var_decl_list -> var_decl .)
    FLOAT           reduce using rule 7 (var_decl_list -> var_decl .)
    MAIN            reduce using rule 7 (var_decl_list -> var_decl .)
    LBRACE          reduce using rule 7 (var_decl_list -> var_decl .)
    ID              shift and go to state 20

    var_decl                       shift and go to state 18
    var_decl_list                  shift and go to state 29
    id_list                        shift and go to state 19

state 19

    (8) var_decl -> id_list . COLON type SEMICOLON

    COLON           shift and go to state 30


state 20

    (9) id_list -> ID . COMMA id_list
    (10) id_list -> ID .

    COMMA           shift and go to state 31
    COLON           reduce using rule 10 (id_list -> ID .)


state 21

    (1) programa -> PROGRAM ID SEMICOLON program_start vars funcs MAIN . LPAREN RPAREN main_start body END

    LPAREN          shift and go to state 32


state 22

    (13) funcs -> func funcs .

    MAIN            reduce using rule 13 (funcs -> func funcs .)


state 23

    (17) func -> func_start params . RPAREN LBRACKET vars func_code_start body RBRACKET SEMICOLON

    RPAREN          shift and go to state 33


state 24

    (19) params -> param_list .

    RPAREN          reduce using rule 19 (params -> param_list .)


state 25

    (20) params -> empty .

    RPAREN          reduce using rule 20 (params -> empty .)


state 26

    (21) param_list -> ID . COLON type COMMA param_list
    (22) param_list -> ID . COLON type

    COLON           shift and go to state 34


state 27

    (15) func_start -> VOID ID . LPAREN

    LPAREN          shift and go to state 35


state 28

    (16) func_start -> type ID . LPAREN

    LPAREN          shift and go to state 36


state 29

    (6) var_decl_list -> var_decl var_decl_list .

    VOID            reduce using rule 6 (var_decl_list -> var_decl var_decl_list .)
    INT             reduce using rule 6 (var_decl_list -> var_decl var_decl_list .)
    FLOAT           reduce using rule 6 (var_decl_list -> var_decl var_decl_list .)
    MAIN            reduce using rule 6 (var_decl_list -> var_decl var_decl_list .)
    LBRACE          reduce using rule 6 (var_decl_list -> var_decl var_decl_list .)


state 30

    (8) var_decl -> id_list COLON . type SEMICOLON
    (11) type -> . INT
    (12) type -> . FLOAT

    INT             shift and go to state 15
    FLOAT           shift and go to state 16

    type                           shift and go to state 37

state 31

    (9) id_list -> ID COMMA . id_list
    (9) id_list -> . ID COMMA id_list
    (10) id_list -> . ID

    ID              shift and go to state 20

    id_list                        shift and go to state 38

state 32

    (1) programa -> PROGRAM ID SEMICOLON program_start vars funcs MAIN LPAREN . RPAREN main_start body END

    RPAREN          shift and go to state 39


state 33

    (17) func -> func_start params RPAREN . LBRACKET vars func_code_start body RBRACKET SEMICOLON

    LBRACKET        shift and go to state 40


state 34

    (21) param_list -> ID COLON . type COMMA param_list
    (22) param_list -> ID COLON . type
    (11) type -> . INT
    (12) type -> . FLOAT

    INT             shift and go to state 15
    FLOAT           shift and go to state 16

    type                           shift and go to state 41

state 35

    (15) func_start -> VOID ID LPAREN .

    ID              reduce using rule 15 (func_start -> VOID ID LPAREN .)
    RPAREN          reduce using rule 15 (func_start -> VOID ID LPAREN .)


state 36

    (16) func_start -> type ID LPAREN .

    ID              reduce using rule 16 (func_start -> type ID LPAREN .)
    RPAREN          reduce using rule 16 (func_start -> type ID LPAREN .)


state 37

    (8) var_decl -> id_list COLON type . SEMICOLON

    SEMICOLON       shift and go to state 42


state 38

    (9) id_list -> ID COMMA id_list .

    COLON           reduce using rule 9 (id_list -> ID COMMA id_list .)


state 39

    (1) programa -> PROGRAM ID SEMICOLON program_start vars funcs MAIN LPAREN RPAREN . main_start body END
    (3) main_start -> .

    LBRACE          reduce using rule 3 (main_start -> .)

    main_start                     shift and go to state 43

state 40

    (17) func -> func_start params RPAREN LBRACKET . vars func_code_start body RBRACKET SEMICOLON
    (4) vars -> . VAR var_decl_list
    (5) vars -> . empty
    (70) empty -> .

    VAR             shift and go to state 7
    LBRACE          reduce using rule 70 (empty -> .)

    vars                           shift and go to state 44
    empty                          shift and go to state 8

state 41

    (21) param_list -> ID COLON type . COMMA param_list
    (22) param_list -> ID COLON type .

    COMMA           shift and go to state 45
    RPAREN          reduce using rule 22 (param_list -> ID COLON type .)


state 42

    (8) var_decl -> id_list COLON type SEMICOLON .

    ID              reduce using rule 8 (var_decl -> id_list COLON type SEMICOLON .)
    VOID            reduce using rule 8 (var_decl -> id_list COLON type SEMICOLON .)
    INT             reduce using rule 8 (var_decl -> id_list COLON type SEMICOLON .)
    FLOAT           reduce using rule 8 (var_decl -> id_list COLON type SEMICOLON .)
    MAIN            reduce using rule 8 (var_decl -> id_list COLON type SEMICOLON .)
    LBRACE          reduce using rule 8 (var_decl -> id_list COLON type SEMICOLON .)


state 43

    (1) programa -> PROGRAM ID SEMICOLON program_start vars funcs MAIN LPAREN RPAREN main_start . body END
    (23) body -> . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 47

    body                           shift and go to state 46

state 44

    (17) func -> func_start params RPAREN LBRACKET vars . func_code_start body RBRACKET SEMICOLON
    (18) func_code_start -> .

    LBRACE          reduce using rule 18 (func_code_start -> .)

    func_code_start                shift and go to state 48

state 45

    (21) param_list -> ID COLON type COMMA . param_list
    (21) param_list -> . ID COLON type COMMA param_list
    (22) param_list -> . ID COLON type

    ID              shift and go to state 26

    param_list                     shift and go to state 49

state 46

    (1) programa -> PROGRAM ID SEMICOLON program_start vars funcs MAIN LPAREN RPAREN main_start body . END

    END             shift and go to state 50


state 47

    (23) body -> LBRACE . statement_list RBRACE
    (24) statement_list -> . statement statement_list
    (25) statement_list -> . empty
    (26) statement -> . assign
    (27) statement -> . condition
    (28) statement -> . cycle
    (29) statement -> . f_call SEMICOLON
    (30) statement -> . print
    (31) statement -> . return_stmt
    (70) empty -> .
    (33) assign -> . ID EQ expression SEMICOLON
    (34) condition -> . IF LPAREN expression RPAREN if_test body if_end
    (35) condition -> . IF LPAREN expression RPAREN if_test body ELSE else_start body if_end
    (39) cycle -> . WHILE while_start LPAREN expression RPAREN while_test DO body while_end
    (66) f_call -> . ID LPAREN expression_list RPAREN
    (67) f_call -> . ID LPAREN RPAREN
    (43) print -> . PRINT LPAREN print_list RPAREN SEMICOLON
    (32) return_stmt -> . RETURN expression SEMICOLON

    RBRACE          reduce using rule 70 (empty -> .)
    ID              shift and go to state 60
    IF              shift and go to state 61
    WHILE           shift and go to state 62
    PRINT           shift and go to state 63
    RETURN          shift and go to state 64

    statement_list                 shift and go to state 51
    statement                      shift and go to state 52
    empty                          shift and go to state 53
    assign                         shift and go to state 54
    condition                      shift and go to state 55
    cycle                          shift and go to state 56
    f_call                         shift and go to state 57
    print                          shift and go to state 58
    return_stmt                    shift and go to state 59

state 48

    (17) func -> func_start params RPAREN LBRACKET vars func_code_start . body RBRACKET SEMICOLON
    (23) body -> . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 47

    body                           shift and go to state 65

state 49

    (21) param_list -> ID COLON type COMMA param_list .

    RPAREN          reduce using rule 21 (param_list -> ID COLON type COMMA param_list .)


state 50

    (1) programa -> PROGRAM ID SEMICOLON program_start vars funcs MAIN LPAREN RPAREN main_start body END .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON program_start vars funcs MAIN LPAREN RPAREN main_start body END .)


state 51

    (23) body -> LBRACE statement_list . RBRACE

    RBRACE          shift and go to state 66


state 52

    (24) statement_list -> statement . statement_list
    (24) statement_list -> . statement statement_list
    (25) statement_list -> . empty
    (26) statement -> . assign
    (27) statement -> . condition
    (28) statement -> . cycle
    (29) statement -> . f_call SEMICOLON
    (30) statement -> . print
    (31) statement -> . return_stmt
    (70) empty -> .
    (33) assign -> . ID EQ expression SEMICOLON
    (34) condition -> . IF LPAREN expression RPAREN if_test body if_end
    (35) condition -> . IF LPAREN expression RPAREN if_test body ELSE else_start body if_end
    (39) cycle -> . WHILE while_start LPAREN expression RPAREN while_test DO body while_end
    (66) f_call -> . ID LPAREN expression_list RPAREN
    (67) f_call -> . ID LPAREN RPAREN
    (43) print -> . PRINT LPAREN print_list RPAREN SEMICOLON
    (32) return_stmt -> . RETURN expression SEMICOLON

    RBRACE          reduce using rule 70 (empty -> .)
    ID              shift and go to state 60
    IF              shift and go to state 61
    WHILE           shift and go to state 62
    PRINT           shift and go to state 63
    RETURN          shift and go to state 64

    statement                      shift and go to state 52
    statement_list                 shift and go to state 67
    empty                          shift and go to state 53
    assign                         shift and go to state 54
    condition                      shift and go to state 55
    cycle                          shift and go to state 56
    f_call                         shift and go to state 57
    print                          shift and go to state 58
    return_stmt                    shift and go to state 59

state 53

    (25) statement_list -> empty .

    RBRACE          reduce using rule 25 (statement_list -> empty .)


state 54

    (26) statement -> assign .

    ID              reduce using rule 26 (statement -> assign .)
    IF              reduce using rule 26 (statement -> assign .)
    WHILE           reduce using rule 26 (statement -> assign .)
    PRINT           reduce using rule 26 (statement -> assign .)
    RETURN          reduce using rule 26 (statement -> assign .)
    RBRACE          reduce using rule 26 (statement -> assign .)


state 55

    (27) statement -> condition .

    ID              reduce using rule 27 (statement -> condition .)
    IF              reduce using rule 27 (statement -> condition .)
    WHILE           reduce using rule 27 (statement -> condition .)
    PRINT           reduce using rule 27 (statement -> condition .)
    RETURN          reduce using rule 27 (statement -> condition .)
    RBRACE          reduce using rule 27 (statement -> condition .)


state 56

    (28) statement -> cycle .

    ID              reduce using rule 28 (statement -> cycle .)
    IF              reduce using rule 28 (statement -> cycle .)
    WHILE           reduce using rule 28 (statement -> cycle .)
    PRINT           reduce using rule 28 (statement -> cycle .)
    RETURN          reduce using rule 28 (statement -> cycle .)
    RBRACE          reduce using rule 28 (statement -> cycle .)


state 57

    (29) statement -> f_call . SEMICOLON

    SEMICOLON       shift and go to state 68


state 58

    (30) statement -> print .

    ID              reduce using rule 30 (statement -> print .)
    IF              reduce using rule 30 (statement -> print .)
    WHILE           reduce using rule 30 (statement -> print .)
    PRINT           reduce using rule 30 (statement -> print .)
    RETURN          reduce using rule 30 (statement -> print .)
    RBRACE          reduce using rule 30 (statement -> print .)


state 59

    (31) statement -> return_stmt .

    ID              reduce using rule 31 (statement -> return_stmt .)
    IF              reduce using rule 31 (statement -> return_stmt .)
    WHILE           reduce using rule 31 (statement -> return_stmt .)
    PRINT           reduce using rule 31 (statement -> return_stmt .)
    RETURN          reduce using rule 31 (statement -> return_stmt .)
    RBRACE          reduce using rule 31 (statement -> return_stmt .)


state 60

    (33) assign -> ID . EQ expression SEMICOLON
    (66) f_call -> ID . LPAREN expression_list RPAREN
    (67) f_call -> ID . LPAREN RPAREN

    EQ              shift and go to state 69
    LPAREN          shift and go to state 70


state 61

    (34) condition -> IF . LPAREN expression RPAREN if_test body if_end
    (35) condition -> IF . LPAREN expression RPAREN if_test body ELSE else_start body if_end

    LPAREN          shift and go to state 71


state 62

    (39) cycle -> WHILE . while_start LPAREN expression RPAREN while_test DO body while_end
    (40) while_start -> .

    LPAREN          reduce using rule 40 (while_start -> .)

    while_start                    shift and go to state 72

state 63

    (43) print -> PRINT . LPAREN print_list RPAREN SEMICOLON

    LPAREN          shift and go to state 73


state 64

    (32) return_stmt -> RETURN . expression SEMICOLON
    (48) expression -> . exp
    (49) expression -> . exp GT exp
    (50) expression -> . exp LT exp
    (51) expression -> . exp NEQ exp
    (52) exp -> . termino
    (53) exp -> . exp PLUS termino
    (54) exp -> . exp MINUS termino
    (55) termino -> . factor
    (56) termino -> . termino MULT factor
    (57) termino -> . termino DIV factor
    (58) factor -> . LPAREN expression RPAREN
    (59) factor -> . PLUS factor
    (60) factor -> . MINUS factor
    (61) factor -> . f_call
    (62) factor -> . cte
    (63) factor -> . ID
    (66) f_call -> . ID LPAREN expression_list RPAREN
    (67) f_call -> . ID LPAREN RPAREN
    (64) cte -> . CTE_INT
    (65) cte -> . CTE_FLOAT

    LPAREN          shift and go to state 80
    PLUS            shift and go to state 77
    MINUS           shift and go to state 78
    ID              shift and go to state 83
    CTE_INT         shift and go to state 84
    CTE_FLOAT       shift and go to state 85

    expression                     shift and go to state 74
    exp                            shift and go to state 75
    termino                        shift and go to state 76
    factor                         shift and go to state 79
    f_call                         shift and go to state 81
    cte                            shift and go to state 82

state 65

    (17) func -> func_start params RPAREN LBRACKET vars func_code_start body . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 86


state 66

    (23) body -> LBRACE statement_list RBRACE .

    END             reduce using rule 23 (body -> LBRACE statement_list RBRACE .)
    RBRACKET        reduce using rule 23 (body -> LBRACE statement_list RBRACE .)
    ELSE            reduce using rule 23 (body -> LBRACE statement_list RBRACE .)
    ID              reduce using rule 23 (body -> LBRACE statement_list RBRACE .)
    IF              reduce using rule 23 (body -> LBRACE statement_list RBRACE .)
    WHILE           reduce using rule 23 (body -> LBRACE statement_list RBRACE .)
    PRINT           reduce using rule 23 (body -> LBRACE statement_list RBRACE .)
    RETURN          reduce using rule 23 (body -> LBRACE statement_list RBRACE .)
    RBRACE          reduce using rule 23 (body -> LBRACE statement_list RBRACE .)


state 67

    (24) statement_list -> statement statement_list .

    RBRACE          reduce using rule 24 (statement_list -> statement statement_list .)


state 68

    (29) statement -> f_call SEMICOLON .

    ID              reduce using rule 29 (statement -> f_call SEMICOLON .)
    IF              reduce using rule 29 (statement -> f_call SEMICOLON .)
    WHILE           reduce using rule 29 (statement -> f_call SEMICOLON .)
    PRINT           reduce using rule 29 (statement -> f_call SEMICOLON .)
    RETURN          reduce using rule 29 (statement -> f_call SEMICOLON .)
    RBRACE          reduce using rule 29 (statement -> f_call SEMICOLON .)


state 69

    (33) assign -> ID EQ . expression SEMICOLON
    (48) expression -> . exp
    (49) expression -> . exp GT exp
    (50) expression -> . exp LT exp
    (51) expression -> . exp NEQ exp
    (52) exp -> . termino
    (53) exp -> . exp PLUS termino
    (54) exp -> . exp MINUS termino
    (55) termino -> . factor
    (56) termino -> . termino MULT factor
    (57) termino -> . termino DIV factor
    (58) factor -> . LPAREN expression RPAREN
    (59) factor -> . PLUS factor
    (60) factor -> . MINUS factor
    (61) factor -> . f_call
    (62) factor -> . cte
    (63) factor -> . ID
    (66) f_call -> . ID LPAREN expression_list RPAREN
    (67) f_call -> . ID LPAREN RPAREN
    (64) cte -> . CTE_INT
    (65) cte -> . CTE_FLOAT

    LPAREN          shift and go to state 80
    PLUS            shift and go to state 77
    MINUS           shift and go to state 78
    ID              shift and go to state 83
    CTE_INT         shift and go to state 84
    CTE_FLOAT       shift and go to state 85

    expression                     shift and go to state 87
    exp                            shift and go to state 75
    termino                        shift and go to state 76
    factor                         shift and go to state 79
    f_call                         shift and go to state 81
    cte                            shift and go to state 82

state 70

    (66) f_call -> ID LPAREN . expression_list RPAREN
    (67) f_call -> ID LPAREN . RPAREN
    (68) expression_list -> . expression COMMA expression_list
    (69) expression_list -> . expression
    (48) expression -> . exp
    (49) expression -> . exp GT exp
    (50) expression -> . exp LT exp
    (51) expression -> . exp NEQ exp
    (52) exp -> . termino
    (53) exp -> . exp PLUS termino
    (54) exp -> . exp MINUS termino
    (55) termino -> . factor
    (56) termino -> . termino MULT factor
    (57) termino -> . termino DIV factor
    (58) factor -> . LPAREN expression RPAREN
    (59) factor -> . PLUS factor
    (60) factor -> . MINUS factor
    (61) factor -> . f_call
    (62) factor -> . cte
    (63) factor -> . ID
    (66) f_call -> . ID LPAREN expression_list RPAREN
    (67) f_call -> . ID LPAREN RPAREN
    (64) cte -> . CTE_INT
    (65) cte -> . CTE_FLOAT

    RPAREN          shift and go to state 89
    LPAREN          shift and go to state 80
    PLUS            shift and go to state 77
    MINUS           shift and go to state 78
    ID              shift and go to state 83
    CTE_INT         shift and go to state 84
    CTE_FLOAT       shift and go to state 85

    expression_list                shift and go to state 88
    expression                     shift and go to state 90
    exp                            shift and go to state 75
    termino                        shift and go to state 76
    factor                         shift and go to state 79
    f_call                         shift and go to state 81
    cte                            shift and go to state 82

state 71

    (34) condition -> IF LPAREN . expression RPAREN if_test body if_end
    (35) condition -> IF LPAREN . expression RPAREN if_test body ELSE else_start body if_end
    (48) expression -> . exp
    (49) expression -> . exp GT exp
    (50) expression -> . exp LT exp
    (51) expression -> . exp NEQ exp
    (52) exp -> . termino
    (53) exp -> . exp PLUS termino
    (54) exp -> . exp MINUS termino
    (55) termino -> . factor
    (56) termino -> . termino MULT factor
    (57) termino -> . termino DIV factor
    (58) factor -> . LPAREN expression RPAREN
    (59) factor -> . PLUS factor
    (60) factor -> . MINUS factor
    (61) factor -> . f_call
    (62) factor -> . cte
    (63) factor -> . ID
    (66) f_call -> . ID LPAREN expression_list RPAREN
    (67) f_call -> . ID LPAREN RPAREN
    (64) cte -> . CTE_INT
    (65) cte -> . CTE_FLOAT

    LPAREN          shift and go to state 80
    PLUS            shift and go to state 77
    MINUS           shift and go to state 78
    ID              shift and go to state 83
    CTE_INT         shift and go to state 84
    CTE_FLOAT       shift and go to state 85

    expression                     shift and go to state 91
    exp                            shift and go to state 75
    termino                        shift and go to state 76
    factor                         shift and go to state 79
    f_call                         shift and go to state 81
    cte                            shift and go to state 82

state 72

    (39) cycle -> WHILE while_start . LPAREN expression RPAREN while_test DO body while_end

    LPAREN          shift and go to state 92


state 73

    (43) print -> PRINT LPAREN . print_list RPAREN SEMICOLON
    (44) print_list -> . print_item COMMA print_list
    (45) print_list -> . print_item
    (46) print_item -> . expression
    (47) print_item -> . CTE_STRING
    (48) expression -> . exp
    (49) expression -> . exp GT exp
    (50) expression -> . exp LT exp
    (51) expression -> . exp NEQ exp
    (52) exp -> . termino
    (53) exp -> . exp PLUS termino
    (54) exp -> . exp MINUS termino
    (55) termino -> . factor
    (56) termino -> . termino MULT factor
    (57) termino -> . termino DIV factor
    (58) factor -> . LPAREN expression RPAREN
    (59) factor -> . PLUS factor
    (60) factor -> . MINUS factor
    (61) factor -> . f_call
    (62) factor -> . cte
    (63) factor -> . ID
    (66) f_call -> . ID LPAREN expression_list RPAREN
    (67) f_call -> . ID LPAREN RPAREN
    (64) cte -> . CTE_INT
    (65) cte -> . CTE_FLOAT

    CTE_STRING      shift and go to state 96
    LPAREN          shift and go to state 80
    PLUS            shift and go to state 77
    MINUS           shift and go to state 78
    ID              shift and go to state 83
    CTE_INT         shift and go to state 84
    CTE_FLOAT       shift and go to state 85

    print_list                     shift and go to state 93
    print_item                     shift and go to state 94
    expression                     shift and go to state 95
    exp                            shift and go to state 75
    termino                        shift and go to state 76
    factor                         shift and go to state 79
    f_call                         shift and go to state 81
    cte                            shift and go to state 82

state 74

    (32) return_stmt -> RETURN expression . SEMICOLON

    SEMICOLON       shift and go to state 97


state 75

    (48) expression -> exp .
    (49) expression -> exp . GT exp
    (50) expression -> exp . LT exp
    (51) expression -> exp . NEQ exp
    (53) exp -> exp . PLUS termino
    (54) exp -> exp . MINUS termino

    SEMICOLON       reduce using rule 48 (expression -> exp .)
    COMMA           reduce using rule 48 (expression -> exp .)
    RPAREN          reduce using rule 48 (expression -> exp .)
    GT              shift and go to state 98
    LT              shift and go to state 99
    NEQ             shift and go to state 100
    PLUS            shift and go to state 101
    MINUS           shift and go to state 102


state 76

    (52) exp -> termino .
    (56) termino -> termino . MULT factor
    (57) termino -> termino . DIV factor
